// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`catalogFromOpenApi stream list > all listable tables (no webhook filter) 1`] = `
[
  "accounts",
  "apple_pay_domains",
  "application_fees",
  "balance_transactions",
  "billing_alerts",
  "billing_credit_grants",
  "billing_meters",
  "billing_portal_configurations",
  "charges",
  "checkout_sessions",
  "climate_orders",
  "climate_products",
  "climate_suppliers",
  "country_specs",
  "coupons",
  "credit_notes",
  "customers",
  "disputes",
  "early_fraud_warnings",
  "events",
  "features",
  "file_links",
  "files",
  "financial_connections_accounts",
  "forwarding_requests",
  "identity_verification_reports",
  "identity_verification_sessions",
  "invoice_payments",
  "invoice_rendering_templates",
  "invoiceitems",
  "invoices",
  "issuing_authorizations",
  "issuing_cardholders",
  "issuing_cards",
  "issuing_disputes",
  "issuing_personalization_designs",
  "issuing_physical_bundles",
  "issuing_transactions",
  "payment_intents",
  "payment_links",
  "payment_method_configurations",
  "payment_method_domains",
  "payment_methods",
  "payouts",
  "plans",
  "prices",
  "products",
  "promotion_codes",
  "quotes",
  "radar_value_lists",
  "refunds",
  "reporting_report_runs",
  "reporting_report_types",
  "reviews",
  "scheduled_query_runs",
  "setup_intents",
  "shipping_rates",
  "subscription_schedules",
  "subscriptions",
  "tax_codes",
  "tax_ids",
  "tax_rates",
  "tax_registrations",
  "terminal_configurations",
  "terminal_locations",
  "terminal_readers",
  "test_helpers_test_clocks",
  "topups",
  "transfers",
  "treasury_financial_accounts",
  "v2_core_accounts",
  "v2_core_event_destinations",
  "v2_core_events",
  "webhook_endpoints",
]
`;

exports[`catalogFromOpenApi stream list > default: only tables with webhook events 1`] = `
[
  "accounts",
  "application_fees",
  "billing_alerts",
  "billing_credit_grants",
  "billing_meters",
  "billing_portal_configurations",
  "charges",
  "checkout_sessions",
  "climate_orders",
  "climate_products",
  "coupons",
  "credit_notes",
  "customers",
  "disputes",
  "early_fraud_warnings",
  "files",
  "financial_connections_accounts",
  "identity_verification_sessions",
  "invoice_payments",
  "invoiceitems",
  "invoices",
  "issuing_authorizations",
  "issuing_cardholders",
  "issuing_cards",
  "issuing_disputes",
  "issuing_personalization_designs",
  "issuing_transactions",
  "payment_intents",
  "payment_links",
  "payment_methods",
  "payouts",
  "plans",
  "prices",
  "products",
  "promotion_codes",
  "quotes",
  "refunds",
  "reporting_report_runs",
  "reporting_report_types",
  "reviews",
  "scheduled_query_runs",
  "setup_intents",
  "subscription_schedules",
  "subscriptions",
  "tax_ids",
  "tax_rates",
  "terminal_readers",
  "test_helpers_test_clocks",
  "topups",
  "transfers",
  "treasury_financial_accounts",
  "v2_core_accounts",
  "v2_core_event_destinations",
]
`;
